[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/auswm85/rung"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
rung-core = { version = "0.2.0", path = "crates/rung-core" }
rung-git = { version = "0.2.0", path = "crates/rung-git" }
rung-github = { version = "0.2.0", path = "crates/rung-github" }

# Git operations
git2 = "0.19"

# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client (rustls for cross-platform builds)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Security
secrecy = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Terminal output
colored = "2"
inquire = "0.9"
console = "0.15"
indicatif = "0.17"

# Testing
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
pre-release-commit-message = "chore: release v{{version}}"
tag-message = "v{{version}}"
push = true
publish = false  # CI handles crates.io publishing

# Update internal crate versions in workspace.dependencies
[[workspace.metadata.release.pre-release-replacements]]
file = "Cargo.toml"
search = 'rung-core = \{ version = "[^"]*"'
replace = 'rung-core = { version = "{{version}}"'

[[workspace.metadata.release.pre-release-replacements]]
file = "Cargo.toml"
search = 'rung-git = \{ version = "[^"]*"'
replace = 'rung-git = { version = "{{version}}"'

[[workspace.metadata.release.pre-release-replacements]]
file = "Cargo.toml"
search = 'rung-github = \{ version = "[^"]*"'
replace = 'rung-github = { version = "{{version}}"'
