[package]
name = "rung-cli"
description = "CLI for Rung - the developer's ladder for stacked PRs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"
keywords = ["git", "github", "stacked-prs", "workflow", "cli"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/rung-{ version }-{ target }.{ archive-format }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[[bin]]
name = "rung"
path = "src/main.rs"

[features]
default = []
vendored-openssl = ["rung-core/vendored-openssl", "rung-git/vendored-openssl"]

[dependencies]
rung-core = { workspace = true }
rung-git = { workspace = true }
rung-github = { workspace = true }

clap = { workspace = true }
clap_complete = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
colored = { workspace = true }
console = { workspace = true }
inquire = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
