[package]
name = "rung-core"
description = "Core library for Rung - stack model, state management, sync engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rung-git = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
git2 = { workspace = true }

[lints]
workspace = true
