[package]
name = "rung-git"
description = "Git operations abstraction for Rung using git2-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["git", "git2", "vcs"]
categories = ["development-tools"]

[dependencies]
git2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
